public/css/index.css
:root {
    --light-blue: #80E9FF;
    --light-purple: #7A73FF;
    --light-green: #00ffa2;
}
::-webkit-scrollbar {
    width: 12px;
    background-color: transparent;
}

::-webkit-scrollbar-button {
    display: none;
    width: 0;
    height: 0;
}

::-webkit-scrollbar-corner {
    background-color: transparent;
}

::-webkit-scrollbar-thumb {
    background-color: #222222;
    border: 2px solid #242424;
    border-radius: 10px;
}

html {
    height: 100%;
    max-width: 100%;
    overflow-x: hidden;
}

body {
    height: 100%;
    margin: 0px;
    color: #ffffff;
    background-color: #121212;
    font-family: 'Fira Code', monospace;
    margin: 0px;
    max-width: 100%;
}
.page:not(#first-page) {
    height: 100%;
    display: flex;
    align-items: flex-start;
    justify-content: flex-start;
    flex-direction: column;
    margin: 3vh 3vw;
}
h1.title {
    font-size : clamp(2rem, 6vw, 5rem);
    font-family: 'Montserrat', sans-serif;
    font-weight: normal;
}
.text-container {
    width: 60vw;
}
.text {
    font-size : clamp(0.8rem, 2vw, 1rem);
}


/*
 -----------------
    Fixed SVG
 ----------------
*/

@keyframes spin {
    100% {  transform: rotate(360deg); }
}
@keyframes fast-spin-enlarge {
    0% { transform: scale(0); }
    100% { transform: scale(1) rotate(1080deg); }
}
@keyframes in-and-out {
    0% { transform: scale(1); }
    50% { transform: scale(3.2); }
    100% { transform: scale(1); }
}
@keyframes fade-in {
    100% { opacity: 0.8; }
}
@keyframes close-in {
    100% { r: 0; }
}

@keyframes pulse {
    0% { r: 0; opacity: 0.8; }
    50% { opacity: 0.6; }
    100% { opacity: 0; r: 200; }
}
@keyframes to-blue {
    100% { stroke: var(--light-blue); }
}
@keyframes blue-and-spin {
    100% { transform: rotate(360deg); stroke: var(--light-blue); }
}
@keyframes enlarge {
    0% { transform: scale(0); }
    100% { transform: scale(1); }
}
#spinning-circle {
    width: 33%;
    max-width: 100%;
    position: fixed;
    top: 50%;
    right: 2vw;
    transform: translateY(-50%);
    z-index: 2;
}
#spinning-circle:not(.hidden, .unhiding) {
    cursor: pointer;
}
#outerCircle {
    stroke: var(--light-blue);
    opacity: 0.8;
}
#centerCircle {
    fill: var(--light-blue);
    opacity: 0.8;
}
#hexagon {
    stroke: var(--light-purple);
    opacity: 0.8;

}
.first-transform #hexagon {
    transform-origin: center;
    animation: blue-and-spin 2s ease infinite;
}
.first-transform #outerCircle {
    transform-origin: center;
    animation: fade-in 2s ease-in infinite,
                close-in 2s ease-in infinite;
}
.second-state #centerCircle {
    fill: var(--light-green);
}
.second-state #outerCircle {
    stroke: var(--light-green);
    transform-origin: center;
    animation: pulse 2s ease infinite;
}
.second-state #hexagon {
    stroke: var(--light-blue);
}
.hidden {
    opacity: 0;
}
.unhiding #outerCircle {
    opacity: 0;
    transform-origin: center;
    animation: enlarge 2s cubic-bezier(0.64, 0, 0.78, 0) 1 1s,
                fade-in 1.5s ease 1 1s normal forwards;
}
.unhiding #hexagon {
    opacity: 0;
    transform-origin: center;
    animation: fast-spin-enlarge 3s cubic-bezier(0.16, 1, 0.3, 1) 1 1.2s,
                fade-in 2s ease 1 1.2s normal forwards,
                to-blue 2s cubic-bezier(0.61, 1, 0.88, 1) 1 1.2s reverse;
}
.unhiding #centerCircle {
    opacity: 0.8;
    transform-origin: center;
    animation: enlarge 1.5s cubic-bezier(0.64, 0, 0.78, 0);
}
.spin {
    transform-origin: center;
    animation: spin 2s ease infinite;
}
.enlarge-shrink {
    transform-origin: center;
    animation: in-and-out 2s ease infinite;
}


/*
 -----------------
    First page
 -----------------
*/

@keyframes animated-text {
    0% { width: 0; }
    100% { width: 95%; }
}
@keyframes animated-cursor {
    0%, 49.9%, 100% { border-right-color: #ffffff; }
    50%, 99.9% { border-right-color: transparent; }
}
@keyframes slide-left {
    100% {
        transform: translateX(calc(-31.5vw + 100px));
    }
}
#first-page {
    min-height: 100%;
    display: grid;
    place-items: center;
}
.slide-left {
    animation: slide-left 1s cubic-bezier(0.68, -0.6, 0.32, 1.6) 0s 1 normal forwards;
}
.title-container {
    min-width: calc(clamp(1rem, 3.5vw, 2.2rem) * 14.8);
}
.comment {
    max-width: calc(clamp(1rem, 3.5vw, 2.2rem) * 14.7);
    white-space: nowrap;
    overflow: hidden;
    color: rgba(170, 170, 170, 0.35);
    font-style: italic;
    font-size : clamp(1rem, 3.5vw, 2.2rem);
    border-right: solid 0.2vw transparent;
    animation: animated-cursor 1060ms linear infinite;
}
.type-writer {
    white-space: nowrap;
    overflow: hidden;
    font-size : clamp(1rem, 3.5vw, 2.2rem);
    max-width: calc(clamp(1rem, 3.5vw, 2.2rem) * 13);
    color: #ffffff;
    border-right: solid 0.2vw transparent;
    animation: animated-text 1.2s steps(25,end) 1s 1 normal both,
                animated-cursor 1060ms linear 3;
}
#double-slash {
    display: none;
}


/*
-------------------
    About page
-------------------
*/



/*
-------------------
    Skills page
-------------------
*/

.bar {
    fill: var(--light-blue);
    opacity: 0.8;
}
.label {
    fill: #ffffff;
}
.y-axis {
    fill: #ffffff;
}
.chart-container {
    display: inline-block;
    position: relative;
    width: 100%;
    padding-bottom: 100%;
    vertical-align: top;
    overflow: hidden;
}
.skills-chart {
    display: inline-block;
    position: absolute;
    top: 0;
    left: 0;
}

/*
-------------------
    Projects page
-------------------
*/



/*
-----------------------
    Contact Me page
------------------1----
*/
.form-container {
    width: 60vw;
}
.contact-form {
    width: min(50vw, 500px);
    height: 40vh;
}
.input-field {
    width: calc(100% - 40px);
    margin: 10px;
    border: none;
    padding: 10px;
    border-radius: 4px;
    outline: none;
    font-size: 14px;
    background: #313131;
    color: #fff;
    font-family: Arial, Helvetica, sans-serif;
}
.submit {
    width: 80px;
    cursor: pointer;
    float: right;
}
.message {
    height: 30%;
}

@media (max-aspect-ratio: 1/1) {
    #spinning-circle {
        display: none;
    }
    .page:not(#first-page) {
        align-items: center;
    }
    .title-container {
        animation: none;
    }
    .contact-form {
        float: left;
    }
    .chart-container {
        width: 200%;
    }
    .skills-chart {
        transform: translateX(25%);
    }
}

